# gpsdecode

./: CMakeLists.txt  README.md
doc/: 01_intro.md  02_building.md  03_using.md  CMakeLists.txt  doxygen.conf.in
src/: CMakeLists.txt  WANAddr.cpp  WANAddr.h  main.cpp
test/: CMakeLists.txt  CoordTest.cpp
